# hermes

./: CMakeLists.txt
2d/test_examples/01-poisson/: definitions.h  main.cpp
2d/test_examples/02-poisson-newton/: definitions.h  main.cpp
2d/test_examples/03-navier-stokes/: definitions.cpp  main.cpp
2d/test_examples/04-complex-adapt/: definitions.h
2d/test_examples/05-hcurl-adapt/: definitions.cpp  main.cpp
2d/test_examples/06-system-adapt/: definitions.h  main.cpp
2d/test_examples/07-newton-heat-rk/: definitions.h
2d/test_examples/10-linear-advection-dg-adapt/: definitions.h
2d/test_examples/11-FCT/: definitions.h  fct.h  highOrder.h  hp_adapt.h  lowOrder.h  lumped_projection.h  prev_solution.h  reg_estimator.h
2d/test_examples/12-transient-adapt/: definitions.h
hermes2d/src/: discrete_problem.cpp
hermes3d/: CMakeLists.txt
hermes3d/examples/heat-conduction/: main.cpp
hermes3d/src/: CMakeLists.txt  mesh.h
hermes3d/src/output/: vtk.cpp  vtk.h
hermes3d/src/space/: space.cpp  space.h
hermes3d/tests/adapt/h1-simple/: main.cpp
hermes3d/tests/examples/heat-conduction/: forms.cpp  hexahedron.mesh3d  main.cpp
hermes_common/include/: mixins.h
hermes_common/src/: mixins.cpp
include/2d/: api2d.h  calculation_continuity.h  config.h  discrete_problem.h  global.h  newton_solver.h  runge_kutta.h
include/2d/adapt/: adapt.h
include/2d/function/: function.h  mesh_function.h  solution.h  transformable.h
include/2d/mesh/: hash.h  refmap.h  traverse.h
include/2d/space/: space.h
include/2d/views/: linearizer_base.h
include/algebra/: matrix.h
include/algebra/solvers/: amesos_solver.h  aztecoo_solver.h  epetra.h  linear_matrix_solver.h  mumps_solver.h  newton_solver_nox.h  nonlinear_solver.h  petsc_solver.h  precond.h  precond_ifpack.h  precond_ml.h  superlu_solver.h  umfpack_solver.h
include/base/: hermes_common.h  hermes_function.h
include/util/: api.h  callstack.h  config.h  exceptions.h  mixins.h  vector.h
src/2d/: CMakeLists.txt  api2d.cpp  asmlist.cpp  calculation_continuity.cpp  discrete_problem.cpp  discrete_problem_linear.cpp  forms.cpp  global.cpp  graph.cpp  linear_solver.cpp  mixins2d.cpp  neighbor.cpp  newton_solver.cpp  picard_solver.cpp  runge_kutta.cpp  spline.cpp
src/2d/adapt/: adapt.cpp  kelly_type_adapt.cpp
src/2d/boundary_conditions/: essential_boundary_conditions.cpp
src/2d/function/: exact_solution.cpp  filter.cpp  function.cpp  mesh_function.cpp  solution.cpp  solution_h2d_xml.cpp  transformable.cpp
src/2d/mesh/: curved.cpp  element_to_refine.cpp  hash.cpp  mesh.cpp  mesh_data.cpp  mesh_h1d_xml.cpp  mesh_h2d_xml.cpp  mesh_reader_exodusii.cpp  mesh_reader_h1d_xml.cpp  mesh_reader_h2d.cpp  mesh_reader_h2d_xml.cpp  refinement_type.cpp  refmap.cpp  subdomains_h2d_xml.cpp  traverse.cpp
src/2d/projections/: localprojection.cpp  ogprojection.cpp  ogprojection_nox.cpp
src/2d/quadrature/: limit_order.cpp  quad_std.cpp
src/2d/refinement_selectors/: h1_proj_based_selector.cpp  hcurl_proj_based_selector.cpp  l2_proj_based_selector.cpp  optimum_selector.cpp  order_permutator.cpp  proj_based_selector.cpp  selector.cpp
src/2d/shapeset/: precalc.cpp  shapeset.cpp  shapeset_h1_eigen.cpp  shapeset_h1_jacobi.cpp  shapeset_h1_ortho.cpp  shapeset_h1_quad.cpp  shapeset_hc_gradleg.cpp  shapeset_hc_legendre.cpp  shapeset_hd_legendre.cpp  shapeset_l2_legendre.cpp
src/2d/space/: space.cpp  space_h1.cpp  space_h2d_xml.cpp  space_hcurl.cpp  space_hdiv.cpp  space_l2.cpp
src/2d/views/: base_view.cpp  linearizer.cpp  linearizer_base.cpp  mesh_view.cpp  order_view.cpp  orderizer.cpp  scalar_view.cpp  stream_view.cpp  vector_base_view.cpp  vector_view.cpp  vectorizer.cpp  view.cpp  view_support.cpp
src/2d/weakform/: weakform.cpp
src/2d/weakform_library/: weakforms_elasticity.cpp  weakforms_h1.cpp  weakforms_hcurl.cpp  weakforms_maxwell.cpp  weakforms_neutronics.cpp
src/algebra/: CMakeLists.txt  matrix.cpp  tables.cpp
src/algebra/solvers/: dp_interface.cpp  linear_matrix_solver.cpp  newton_solver_nox.cpp  nonlinear_solver.cpp  umfpack_solver.cpp
src/base/: CMakeLists.txt  hermes_function.cpp  ord.cpp
src/util/: CMakeLists.txt  api.cpp  c99_functions.cpp  callstack.cpp  exceptions.cpp  mixins.cpp  qsort.cpp
